--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
 			<iframe id="facebook" src="http://www.facebook.com/plugins/like.php?app_id=124052687676604&amp;href=http%3A%2F%2Fmake8bitart.com&amp;send=false&amp;layout=button_count&amp;width=140&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font=verdana&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:140px; height:21px;" allowTransparency="true"></iframe>
 			<br /><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://make8bitart.com" data-text="Make 8-bit art!" data-via="jennschiffer" data-related="jennschiffer">Tweet</a>
 			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+			
+			<p>&hearts;&hearts; <a href="https://github.com/jennschiffer/make8bitart" target="_blank">it's open source!</a> &hearts;&hearts;</p>
 		</div>
 	
 	</div>
@@ -141,7 +143,6 @@
 			<div id="instruments">
 				<a href="#" title="draw"><img class="current-tool" id="pencil" src="assets/pencil.png" alt="draw" /></a>
 				<a href="#" title="paint"><img id="paint" src="assets/paint.png" alt="paint" /></a> 
-				<div class="tip"> ? <span class="tip-text">pencil to draw, paint to fill <p>**note: paint is an alpha feature, the larger the area you paint, the more likely it will fail. if "undo" doesn't work, refresh the page.</p></span></div>
 			</div>
 			
 			<p>
@@ -227,9 +228,8 @@
 			<img class="eightbit" id="8bitcolors" src="assets/customcolors.png" />
 			<div class="color-demo eightbit"></div>
 		</div>
-	
+			
 	</div>
-
 
 <script src="js/libs/jquery.min.js"></script>
 <script src="js/libs/draggybits.js"></script>
