fixed undoredo not working on non black/transparent divs

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 			<h3>tell your pals!</h3>
 			<iframe id="facebook" src="http://www.facebook.com/plugins/like.php?app_id=124052687676604&amp;href=http%3A%2F%2Fmake8bitart.com&amp;send=false&amp;layout=button_count&amp;width=140&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font=verdana&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:140px; height:21px;" allowTransparency="true"></iframe>
 			<br /><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://make8bitart.com" data-text="Make 8-bit art!" data-via="jennschiffer" data-related="jennschiffer">Tweet</a>
-			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 			
 			<p>&hearts;&hearts; <a href="https://github.com/jennschiffer/make8bitart" target="_blank">it's open source!</a> &hearts;&hearts;</p>
 		</div>
@@ -206,17 +206,17 @@
 		
 		<div id="color" class="inner clearfix">
 			<h3>pick a color:</h3>
-			<a class="button color primary red" title="red" data-color="rgb(255, 0, 0)" /> </a>
-			<a class="button color primary orange" title="orange" data-color="rgb(255, 165, 0)" /> </a>
-			<a class="button color primary yellow" title="yellow" data-color="rgb(255, 255, 0)" /> </a>
-			<a class="button color primary green" title="green" data-color="rgb(0, 128, 0)" /> </a>
-			<a class="button color primary blue" title="blue" data-color="rgb(0, 0, 255)" /> </a>
-			<a class="button color primary purple" title="purple" data-color="rgb(128, 0, 128)" /> </a>
-			<a class="button color primary black" title="black" data-color="rgb(0, 0, 0)" /> </a>
-			<a class="button color primary gray" title="gray" data-color="rgb(128, 128, 128)" /> </a>
-			<a class="button color primary white" title="white" data-color="rgb(255, 255, 255)" /> </a>
-			<a class="button color favorite" title="jenn's pick" /> </a>
-			<a class="button color transparent" title="erase" data-color="rgb(0, 0, 0, 0)" /> </a>
+			<a class="button color primary red" title="red" data-color="rgba(255, 0, 0, 1)" /> </a>
+			<a class="button color primary orange" title="orange" data-color="rgba(255, 165, 0, 1)" /> </a>
+			<a class="button color primary yellow" title="yellow" data-color="rgba(255, 255, 0, 1)" /> </a>
+			<a class="button color primary green" title="green" data-color="rgba(0, 128, 0, 1)" /> </a>
+			<a class="button color primary blue" title="blue" data-color="rgba(0, 0, 255, 1)" /> </a>
+			<a class="button color primary purple" title="purple" data-color="rgba(128, 0, 128, 1)" /> </a>
+			<a class="button color primary black" title="black" data-color="rgba(0, 0, 0, 1)" /> </a>
+			<a class="button color primary gray" title="gray" data-color="rgba(128, 128, 128, 1)" /> </a>
+			<a class="button color primary white" title="white" data-color="rgba(255, 255, 255, 1)" /> </a>
+			<a class="button color favorite" title="jenn's pick" data-color="rgba(255, 105, 180, 1)" /> </a>
+			<a class="button color transparent" title="erase" data-color="rgba(0, 0, 0, 0)" /> </a>
 			<a class="button color custom" title="custom" /></a>
 		</div>
 		
@@ -237,7 +237,7 @@
 <script src="js/libs/keymaster.js"></script> 
 <script src="js/custom/make8bitart.js"></script>
 
-<script src="//pmetrics.performancing.com/js" type="text/javascript"></script>
+<script src="http://pmetrics.performancing.com/js" type="text/javascript"></script>
 <script type="text/javascript">try{ clicky.init(15102); }catch(e){}</script>
 <noscript><p><img alt="Performancing Metrics" width="1" height="1" src="//pmetrics.performancing.com/15102ns.gif" /></p></noscript></body>
 </html>
