--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 			<h3>tell your pals!</h3>
 			<iframe id="facebook" src="http://www.facebook.com/plugins/like.php?app_id=124052687676604&amp;href=http%3A%2F%2Fmake8bitart.com&amp;send=false&amp;layout=button_count&amp;width=140&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font=verdana&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:140px; height:21px;" allowTransparency="true"></iframe>
 			<br /><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://make8bitart.com" data-text="Make 8-bit art!" data-via="jennschiffer" data-related="jennschiffer">Tweet</a>
-			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 			
 			<p>&hearts;&hearts; <a href="https://github.com/jennschiffer/make8bitart" target="_blank">it's open source!</a> &hearts;&hearts;</p>
 		</div>
@@ -237,7 +237,7 @@
 <script src="js/libs/keymaster.js"></script> 
 <script src="js/custom/make8bitart.js"></script>
 
-<script src="http://pmetrics.performancing.com/js" type="text/javascript"></script>
+<script src="//pmetrics.performancing.com/js" type="text/javascript"></script>
 <script type="text/javascript">try{ clicky.init(15102); }catch(e){}</script>
 <noscript><p><img alt="Performancing Metrics" width="1" height="1" src="//pmetrics.performancing.com/15102ns.gif" /></p></noscript></body>
 </html>
