--- a/index.html
+++ b/index.html
@@ -103,10 +103,11 @@
 		
 		<div id="share">
 			<h3>tell your pals!</h3>
-			<iframe id="facebook" src="http://www.facebook.com/plugins/like.php?app_id=124052687676604&amp;href=http%3A%2F%2Fmake8bitart.com&amp;send=false&amp;layout=button_count&amp;width=140&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font=verdana&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:140px; height:21px;" allowTransparency="true"></iframe>
+			<!--<iframe id="facebook" src="http://www.facebook.com/plugins/like.php?app_id=124052687676604&amp;href=http%3A%2F%2Fmake8bitart.com&amp;send=false&amp;layout=button_count&amp;width=140&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font=verdana&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:140px; height:21px;" allowTransparency="true"></iframe>
 			<br /><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://make8bitart.com" data-text="Make 8-bit art!" data-via="jennschiffer" data-related="jennschiffer">Tweet</a>
 			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-					</div>
+    -->
+    </div>
 	
 	</div>
 		
@@ -164,12 +165,11 @@
 			<h3>save your art</h3> 
 			
 			<input type="submit" value="full page" id="save-full" /> 
-			<div class="tip"> ? <span class="tip-text">opens art in new window for you to save. may not work if your image is super huge. if that's the case, save by selection.</span></div>
 			<br />
 			<input type="submit" value="selection" id="save-selection" />
 			
 			<ul class="instructions">
-				<li>click and drag to select the area of the canvas you want to save. your art will open up in a new window for you to save.</li>		
+				<li>click and drag to select the area of the canvas you want to save.</li>		
 			</ul>
 			
 		</div>
@@ -228,13 +228,25 @@
 		</div>
 			
 	</div>
+
+	<div id="save-box">
+		<div id="save-modal">
+			<img class="ui-hider" src="assets/draggybits/hider2.png">
+
+			<h2>you saved your art!</h2>
+			<img id="finished-art" />
+    
+			<p>Right-click or drag your art to your desktop to save, or <input type="submit" value="upload to imgur.com" id="save-imgur" /> <a id="link-imgur"></a>!</p>
+		</div>
+	</div>
 	
 <script src="js/libs/jquery.min.js"></script>
 <script src="js/libs/draggybits.js"></script>
 <script src="js/libs/keymaster.js"></script> 
 <script src="js/custom/make8bitart.js"></script>
 
-<script src="//pmetrics.performancing.com/js" type="text/javascript"></script>
+<!--<script src="//pmetrics.performancing.com/js" type="text/javascript"></script>
 <script type="text/javascript">try{ clicky.init(15102); }catch(e){}</script>
 <noscript><p><img alt="Performancing Metrics" width="1" height="1" src="//pmetrics.performancing.com/15102ns.gif" /></p></noscript></body>
+-->
 </html>
