fix style of save modal

--- a/index.html
+++ b/index.html
@@ -236,7 +236,8 @@
 			<h2>you saved your art!</h2>
 			<img id="finished-art" />
     
-			<p>Right-click or drag your art to your desktop to save, or <input type="submit" value="upload to imgur.com" id="save-imgur" /> <a id="link-imgur"></a>!</p>
+			<p>Right-click or drag your art to your desktop to save, or <input type="submit" value="upload to imgur.com" id="save-imgur" /> <a id="link-imgur"></a>!</p> 
+			<p><small>**black on transparent art will look blank on imgur but it's not really</small></p>
 		</div>
 	</div>
 	
