improved save modal style

--- a/index.html
+++ b/index.html
@@ -234,10 +234,9 @@
 			<img class="ui-hider" src="assets/draggybits/hider2.png">
 
 			<h2>you saved your art!</h2>
-			<img id="finished-art" />
+			<a href="#" target="_blank"><img id="finished-art" /></a>
     
-			<p>Right-click or drag your art to your desktop to save, or <input type="submit" value="upload to imgur.com" id="save-imgur" /> <a id="link-imgur"></a>!</p> 
-			<p><small>**black on transparent art will look blank on imgur but it's not really</small></p>
+			<p>Click or drag your art to your desktop to save, <br />or <input type="submit" value="upload to imgur.com" id="save-imgur" /> <a id="link-imgur"></a>!</p> 
 		</div>
 	</div>
 	
