--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 
 <head>
   <title>make 8-bit art!</title>
-  <link rel="stylesheet" href="css/libs/draggybits.css" />
-  <link rel="stylesheet" href="css/custom/make8bitart.css" />
+  <link rel="stylesheet" href="css/build/make8bitart.min.css" />
   <link rel="icon" href="assets/favicon.png" />
 </head>
 
@@ -240,10 +239,7 @@
     </div>
   </div>
   
-<script src="js/libs/jquery.min.js"></script>
-<script src="js/libs/draggybits.js"></script>
-<script src="js/libs/keymaster.js"></script> 
-<script src="js/custom/make8bitart.js"></script>
+<script src="js/build/make8bitart.min.js"></script>
 
 <script src="//pmetrics.performancing.com/js" type="text/javascript"></script>
 <script type="text/javascript">try{ clicky.init(15102); }catch(e){}</script>
