refactor grunt build

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <head>
   <title>make 8-bit art!</title>
-  <link rel="stylesheet" href="css/build/make8bitart.min.css" />
+  <link rel="stylesheet" href="build/make8bitart.min.css" />
   <link rel="icon" href="assets/favicon.png" />
 </head>
 
@@ -239,7 +239,7 @@
     </div>
   </div>
   
-<script src="js/build/make8bitart.min.js"></script>
+<script src="build/make8bitart.min.js"></script>
 
 <script src="//pmetrics.performancing.com/js" type="text/javascript"></script>
 <script type="text/javascript">try{ clicky.init(15102); }catch(e){}</script>
