clear color palette functionality, set stage for import/export

--- a/index.html
+++ b/index.html
@@ -204,20 +204,26 @@
     <div id="color" class="inner clearfix">
       <h3>pick a color:</h3>
       <ul class="clearfix">
-        <li><a class="button color primary red" title="red" data-color="rgba(255, 0, 0, 1)" /> </a></li>
-        <li><a class="button color primary orange" title="orange" data-color="rgba(255, 165, 0, 1)" /> </a></li>
-        <li><a class="button color primary yellow" title="yellow" data-color="rgba(255, 255, 0, 1)" /> </a></li>
-        <li><a class="button color primary green" title="green" data-color="rgba(0, 128, 0, 1)" /> </a></li>
-        <li><a class="button color primary blue" title="blue" data-color="rgba(0, 0, 255, 1)" /> </a></li>
-        <li><a class="button color primary purple" title="purple" data-color="rgba(128, 0, 128, 1)" /> </a></li>
-        <li><a class="button color primary black" title="black" data-color="rgba(0, 0, 0, 1)" /> </a></li>
-        <li><a class="button color primary gray" title="gray" data-color="rgba(128, 128, 128, 1)" /> </a></li>
-        <li><a class="button color primary white" title="white" data-color="rgba(255, 255, 255, 1)" /> </a></li>
-        <li><a class="button color transparent" title="erase" data-color="rgba(0, 0, 0, 0)" /> </a></li>
+        <li><a class="button color primary red" title="red" data-color="rgba(255, 0, 0, 1)"> </a></li>
+        <li><a class="button color primary orange" title="orange" data-color="rgba(255, 165, 0, 1)"> </a></li>
+        <li><a class="button color primary yellow" title="yellow" data-color="rgba(255, 255, 0, 1)"> </a></li>
+        <li><a class="button color primary green" title="green" data-color="rgba(0, 128, 0, 1)"> </a></li>
+        <li><a class="button color primary blue" title="blue" data-color="rgba(0, 0, 255, 1)"> </a></li>
+        <li><a class="button color primary purple" title="purple" data-color="rgba(128, 0, 128, 1)"> </a></li>
+        <li><a class="button color primary black" title="black" data-color="rgba(0, 0, 0, 1)"> </a></li>
+        <li><a class="button color primary gray" title="gray" data-color="rgba(128, 128, 128, 1)"> </a></li>
+        <li><a class="button color primary white" title="white" data-color="rgba(255, 255, 255, 1)"> </a></li>
+        <li><a class="button color transparent" title="erase" data-color="rgba(0, 0, 0, 0)"> </a></li>
       </ul>
 
       <h3 class="color-history-label">history palette:</h3>
-      <ul class="color-history" class="clearfix"></ul>
+      <ul class="color-history clearfix"></ul>
+
+      <div id="color-history-tools">
+        <button class="clear">clear</button>
+        <button class="export">export</button>
+        <button class="import">import</button>
+      </div>
     </div>
     
     <div id="colorpicker">
