get color history working

--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
 
       <div id="color-history-tools">
         <button class="clear">clear</button>
-        <button class="export">export</button>
-        <button class="import">import</button>
+        <!--<button class="export">export</button>
+        <button class="import">import</button>-->
       </div>
     </div>
     
