--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
   
     <h1>make 8-bit art!</h1>
-    <h2>an <a href="http://github.com/jennschiffer/make8bitart" target="_blank">open source</a> drawing tool by <a href="http://twitter.com/jennschiffer" target="_blank">@jennschiffer</a></h2>
+    <h2>[an <a href="http://github.com/jennschiffer/make8bitart" target="_blank">open source</a> drawing tool by <a href="http://twitter.com/jennschiffer" target="_blank">jennmoneydollars</a>]</h2>
     
     <div id="minimized-tools-list"></div>
     
