change logo to open sans, misc style

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       _____ \         ~-+-~                   ___~=_______
            ~@#~~ == ...______ __ ___ _--~~--_                  SOCIAL LINKS -->       
   
-  <div id="share" class="draggy" title="what is this even?">
+  <div id="what" class="draggy" title="what is this even?">
   
     <div class="controls">
       <img class="ui-dragger" src="assets/draggybits/dragger2.png" alt="drag">
