--- a/index.html
+++ b/index.html
@@ -282,11 +282,7 @@
     </div>
   </div>
   
-<script src="js/libs/jquery-2.1.1.min.js"></script>
-
-<script src="js/libs/keymaster.js"></script>
-<script src="js/libs/draggybits.js"></script>
-<script src="js/app/make8bitart.js"></script>
+<script src="build/make8bitart.min.js"></script>
 <script src="//pmetrics.performancing.com/js" type="text/javascript"></script>
 <script type="text/javascript">try{ clicky.init(15102); }catch(e){}</script>
 <noscript><p><img alt="Performancing Metrics" width="1" height="1" src="//pmetrics.performancing.com/15102ns.gif" /></p></noscript></body>
