add jshint to grunt, jshint, fix everything jshinting broke haha

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
     </div>
   </div>
 
-  <div id="save-box">
+  <div id="save-modal-container">
     <div id="save-modal">
       <img class="ui-hider" src="assets/draggybits/hider2.png" alt="close">
 
