new pencil icon, refine text input styling

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <h3>canvas tools</h3>
       
       <div id="instruments">
-        <img class="current-tool icon-button" id="pencil" src="assets/pencil.png" alt="draw" data-href="#draw" role="button" title="draw" />
+        <img class="current-tool icon-button" id="pencil" src="assets/pencil2.png" alt="draw" data-href="#draw" role="button" title="draw" />
         <img id="paint" src="assets/paint.png" alt="paint" class="icon-button" data-href="#paint" role="button" title="paint/fill" />
       </div>
       
