--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <link rel="icon" href="assets/favicon.png" />
 </head>
 
-<body id="do-what-you-want-what-you-want-with-my-html-body">
+<body id="welcome-to-the-space-jam">
 
 
 
@@ -285,7 +285,7 @@
     </div>
   </div>
 
-  <div id="save-modal-container">
+  <div id="save-modal-container" class="hidden">
     <div id="save-modal">
       <img class="ui-hider" src="assets/draggybits/hider2.png" alt="close">
 
@@ -296,7 +296,8 @@
     </div>
   </div>
   
-<script src="build/make8bitart.min.js"></script>
+<script src="build/vendor.min.js"></script>
+<script src="build/make8bitart.js"></script>
 <script src="//pmetrics.performancing.com/js" type="text/javascript"></script>
 <script type="text/javascript">try{ clicky.init(15102); }catch(e){}</script>
 <noscript><p><img alt="Performancing Metrics" width="1" height="1" src="//pmetrics.performancing.com/15102ns.gif" /></p></noscript></body>
