add direct url to imgur upload, closes #49

--- a/index.html
+++ b/index.html
@@ -289,7 +289,9 @@
       <h2>you saved your art!</h2>
       <a href="#" target="_blank"><img id="finished-art" /></a>
 
-      <p>Click or drag your art to your desktop to save, <br />or <input type="submit" value="upload to imgur.com" id="save-imgur" /> <a id="link-imgur"></a>!</p>
+      <p>Click or drag your art to your desktop to save!<br />
+         <input type="submit" value="Or upload to imgur.com!" id="save-imgur" /></p>
+      <p id="link-imgur"></p>
     </div>
   </div>
 
