copy and cut prototypes done

--- a/index.html
+++ b/index.html
@@ -131,6 +131,12 @@
       <input type="submit" id="undo" title="ctrl+z" value="undo" disabled="disabled" />
       <input type="submit" id="redo" title="ctrl+y" value="redo" disabled="disabled" />
       <input type="submit" value="new canvas" id="new-canvas" />
+
+      <ul>
+        <li><a id="cut" href="#">cut</a></li>
+        <li><a id="copy" href="#">copy</a></li>
+        <li><a id="paste" href="#">paste</a></li>
+      </ul>
     </div>
 
     <div id="size" class="inner">
