--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
   <div id="header" class="draggy" title="header">
     <div class="controls">
-      <img class="ui-dragger" src="assets/draggybits/dragger3.png" alt="drag">
+      <img class="ui-dragger" src="assets/draggybits/dragger.png" alt="drag">
     </div>
 
     <h1>make 8-bit art!</h1>
@@ -85,8 +85,8 @@
 
   <div id="what" class="draggy" title="what is this even?" data-title="what">
     <div class="controls">
-      <img class="ui-dragger" src="assets/draggybits/dragger3.png" alt="drag">
-      <img class="ui-hider" src="assets/draggybits/hider2.png" alt="minimize">
+      <img class="ui-dragger" src="assets/draggybits/dragger.png" alt="drag">
+      <img class="ui-hider" src="assets/draggybits/hider.png" alt="minimize">
     </div>
 
     <h3>what is this even?</h3>
@@ -116,27 +116,33 @@
 
   <div id="toolbox" class="draggy" title="canvas/brush tools" data-title="tools">
     <div class="controls">
-      <img class="ui-dragger" src="assets/draggybits/dragger3.png" alt="drag">
-      <img class="ui-hider" src="assets/draggybits/hider2.png" alt="minimize">
+      <img class="ui-dragger" src="assets/draggybits/dragger.png" alt="drag">
+      <img class="ui-hider" src="assets/draggybits/hider.png" alt="minimize">
     </div>
 
     <div id="instruments" class="inner">
       <h3>tools</h3>
-      <img class="current-tool icon-button" id="pencil" src="assets/pencil2.png" alt="draw" data-href="#draw" role="button" title="draw" />
-      <img id="paint" src="assets/paint.png" alt="paint" class="icon-button" data-href="#paint" role="button" title="paint/fill" />
+      <ul>
+        <li><img class="current-tool icon-button" id="pencil" src="assets/pencil.png" alt="draw" data-href="#draw" role="button" title="draw" /></li>
+        <li><img id="paint" src="assets/paint.png" alt="paint" class="icon-button" data-href="#paint" role="button" title="paint/fill" /></li>
+      </ul>
     </div>
 
     <div id="editing" class="inner">
       <h3>editing</h3>
+      <ul>
+        <li><img id="cut" src="assets/cut.png" alt="cut" class="icon-button" data-href="#cut" role="button" title="cut" /></li>
+        <li><img id="copy" src="assets/copy.png" alt="copy" class="icon-button" data-href="#copy" role="button" title="copy" /></li>
+        <li><img id="paste" src="assets/paste.png" alt="paste" class="icon-button" data-href="#paste" role="button" title="paste" /></li>
+      </ul>
+
+      <ul class="instructions paste">
+        <li>click on the canvas where you want the top left corner of your copied clip to be pasted.</li>
+      </ul>
+
       <input type="submit" id="undo" title="ctrl+z" value="undo" disabled="disabled" />
       <input type="submit" id="redo" title="ctrl+y" value="redo" disabled="disabled" />
       <input type="submit" value="new canvas" id="new-canvas" />
-
-      <ul>
-        <li><a id="cut" href="#">cut</a></li>
-        <li><a id="copy" href="#">copy</a></li>
-        <li><a id="paste" href="#">paste</a></li>
-      </ul>
     </div>
 
     <div id="size" class="inner">
@@ -169,8 +175,8 @@
 
   <div id="filebox" class="draggy" title="import/save" data-title="import-save">
     <div class="controls">
-      <img class="ui-dragger" src="assets/draggybits/dragger3.png" alt="drag">
-      <img class="ui-hider" src="assets/draggybits/hider2.png" alt="minimize">
+      <img class="ui-dragger" src="assets/draggybits/dragger.png" alt="drag">
+      <img class="ui-hider" src="assets/draggybits/hider.png" alt="minimize">
     </div>
 
     <div id="import" class="inner">
@@ -207,7 +213,7 @@
       </label>
     </div>
 
-    <ul class="instructions">
+    <ul class="instructions save">
       <li>click and drag to select the area of the canvas you want to save.</li>
     </ul>
   </div>
@@ -233,8 +239,8 @@
 
   <div id="colorbox" class="draggy" title="color tools" data-title="colors">
     <div class="controls">
-      <img class="ui-dragger" src="assets/draggybits/dragger3.png" alt="drag">
-      <img class="ui-hider" src="assets/draggybits/hider2.png" alt="minimize">
+      <img class="ui-dragger" src="assets/draggybits/dragger.png" alt="drag">
+      <img class="ui-hider" src="assets/draggybits/hider.png" alt="minimize">
     </div>
 
     <ul class="tabs">
@@ -245,7 +251,7 @@
     <div id="pickers">
       <div id="hex-picker">
         <h3>hex value:</h3>
-        <span class="pound">#</span><input id="hex-color" type="text" value="000000" /> <img class="icon-button" id="color-dropper" src="assets/dropper2.png" alt="color dropper" data-href="#dropper" role="button" title="color dropper" />
+        <span class="pound">#</span><input id="hex-color" type="text" value="000000" /> <img class="icon-button" id="color-dropper" src="assets/dropper.png" alt="color dropper" data-href="#dropper" role="button" title="color dropper" />
       </div>
 
       <ul class="colors clearfix">
@@ -290,7 +296,7 @@
 
   <div id="save-modal-container" class="modal hidden">
     <div id="save-modal" class="inside-modal">
-      <img class="ui-hider" src="assets/draggybits/hider2.png" alt="close">
+      <img class="ui-hider" src="assets/draggybits/hider.png" alt="close">
 
       <h2>you saved your art!</h2>
       <a href="#" target="_blank"><img id="finished-art" /></a>
@@ -303,7 +309,7 @@
 
   <div id="open-modal-container" class="modal hidden">
     <div id="open-modal" class="inside-modal">
-      <img class="ui-hider" src="assets/draggybits/hider2.png" alt="close">
+      <img class="ui-hider" src="assets/draggybits/hider.png" alt="close">
 
       <h2>you have some locally saved art!</h2>
       <h3>wanna open one? click a thumbnail...</h3>
