--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
 
 <script src="build/vendor.min.js"></script>
 <script src="build/make8bitart.js"></script>
-<script src="//pmetrics.performancing.com/js" type="text/javascript"></script>
+<script src="http://pmetrics.performancing.com/js" type="text/javascript"></script>
 <script type="text/javascript">try{ clicky.init(15102); }catch(e){}</script>
 <noscript><p><img alt="Performancing Metrics" width="1" height="1" src="//pmetrics.performancing.com/15102ns.gif" /></p></noscript></body>
 </html>
