--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
       <ul class="gallery"> </ul>
     </div>
   </section>
-  
+
   <section id="pxon-modal-container" class="modal hidden">
     <div id="open-modal" class="inside-modal">
       <div class="controls">
@@ -378,17 +378,16 @@
 
       <h2>export pxon!</h2>
       <h3><a href="http://jennmoney.biz/pxon/">what is pxon? read my spec!</a></h3>
-      
+
       <p>the gist of it is that pxon is pixel art represented in JSON. the current session of your drawing should be represented in the textarea below - paste into a .json file or app that supports pxon for good fun!</p>
 
       <textarea></textarea>
-      
+
       <p><strong>note: pxon is a draft proposal and a fake idea by me (jenn, creator of make8bitart.com) that's being updated sporadically and sometimes doesn't work. please let me know if it's broken!</strong></p>
     </div>
   </section>
 
-<script src="build/vendor.min.js"></script>
-<script src="build/make8bitart.js"></script>
+<script src="build/app.min.js"></script>
 <script src="//pmetrics.performancing.com/js" type="text/javascript"></script>
 <script type="text/javascript">try{ clicky.init(15102); }catch(e){}</script>
 <noscript><p><img alt="Performancing Metrics" width="1" height="1" src="//pmetrics.performancing.com/15102ns.gif" /></p></noscript></body>
