--- a/index.html
+++ b/index.html
@@ -387,8 +387,19 @@
     </div>
   </section>
 
+<script type="text/javascript">
+  if('serviceWorker' in navigator) {
+    navigator.serviceWorker
+             .register('build/service-worker.js')
+             .then(function(reg) {
+               console.log('service worker registered --- ' + reg.scope);
+             }).catch(function(err) {
+               console.log('service worker failed --- ' + err);
+             });
+  }
+</script>
 <script src="build/app.min.js"></script>
-<script src="//pmetrics.performancing.com/js" type="text/javascript"></script>
+<script src="https://pmetrics.performancing.com/js" type="text/javascript"></script>
 <script type="text/javascript">try{ clicky.init(15102); }catch(e){}</script>
 <noscript><p><img alt="Performancing Metrics" width="1" height="1" src="//pmetrics.performancing.com/15102ns.gif" /></p></noscript></body>
 </html>
