--- a/index.html
+++ b/index.html
@@ -390,9 +390,9 @@
 <script type="text/javascript">
   if('serviceWorker' in navigator) {
     navigator.serviceWorker
-             .register('build/service-worker.js')
+             .register('service-worker.js')
              .then(function(reg) {
-               console.log('service worker registered --- ' + reg.scope);
+               console.log('service worker registered --- ' + reg.scope + ' should work offline now :)');
              }).catch(function(err) {
                console.log('service worker failed --- ' + err);
              });
