Adds WOFF2 saving a bunch of KB Adds zopfli encoding to WOFF to save a few KB Subsets both fonts saving a bunch of KB Uses font-display: swap to get rid of FOIT (in Chrome, soon in FF) Uses preload to make fonts fetch and render faster (in Chrome, soon in FF) Updates serviceworker to use WOFF2 only (all browsers that support sw support woff2)

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>make 8-bit art!</title>
+  <link rel="preload" href="/assets/fonts/8bit-Art-Sans-subset.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/assets/fonts/VT323-Regular-subset.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="stylesheet" href="build/make8bitart.min.css" />
   <link rel="icon" href="assets/favicon.png" />
 </head>
