add link to donate to black girls code

--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
 
     <p>this is an <a href="http://github.com/jennschiffer/make8bitart" title="link to make8bitart repo on github" target="_blank">open source</a> pixel art drawing tool by <a href="http://jennmoney.biz" title="official website of" target="_blank">jennmoneydollars</a>!</p>
 
-    <p>if you make something cool, i wanna see it – tweet me at <a href="http://twitter.com/jennschiffer">@jennschiffer</a>!</p>
+    <p>if you make something cool, i wanna see it – tweet me at <a href="http://twitter.com/jennschiffer" target="_blank">@jennschiffer</a>!</p>
+
+    <p>if you really enjoy this and want to support it, you can do so indirectly by <a href="http://www.blackgirlscode.com/" target="_blank">donating to black girls code</a>!</p>
   </section>
 
   <!--
