Disables autofill/autocomplete/spellcheck in the hex input field

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
     <div id="pickers">
       <div id="hex-picker">
         <h2>hex value:</h2>
-        <span class="pound">#</span><input type="text" id="hex-color" value="000000" />
+        <span class="pound">#</span><input type="text" id="hex-color" value="000000" autocomplete="off" autocorrect="off" spellcheck="false" />
 
         <button role="button" id="color-dropper" class="icon-button">
           <img src="assets/dropper.png" alt="color dropper" />
